apps/dev/grafana/ingress.yaml
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: grafana
  namespace: grafana
spec:
  selector:
    istio: gateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "grafana.arch.local"
    - port:
        number: 443
        name: https
        protocol: HTTPS
      tls:
        mode: SIMPLE
        credentialName: wildcard-arch-local-tls
      hosts:
        - "grafana.arch.local"
---
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: grafana
  namespace: grafana
spec:
  hosts:
    - "grafana.arch.local"
  gateways:
    - grafana
  http:
    - route:
        - destination:
            host: grafana.grafana.svc.cluster.local
            port:
              number: 80
